--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "openai": "^6.9.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
