Fix server tsconfig and deps for Render

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -9,6 +9,8 @@
     "allowSyntheticDefaultImports": true,
     "verbatimModuleSyntax": false,
     "strict": true,
-    "skipLibCheck": true
-  }
+    "skipLibCheck": true,
+    "types": ["node"]          // 👈 add this line
+  },
+  "include": ["src"]           // 👈 and add this block
 }
