--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -9,8 +9,7 @@
     "allowSyntheticDefaultImports": true,
     "verbatimModuleSyntax": false,
     "strict": true,
-    "skipLibCheck": true,
-    "types": ["node"]          // 👈 add this line
+    "skipLibCheck": true
   },
-  "include": ["src"]           // 👈 and add this block
+  "include": ["src"]
 }
