--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-"dev": "nodemon -r dotenv/config src/index.ts",
+    "dev": "nodemon -r dotenv/config src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js"
   },
@@ -15,11 +15,14 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "openai": "^6.9.0"
+    "multer": "^2.0.2",
+    "openai": "^6.9.0",
+    "pdf-parse": "^2.4.5"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.10.1",
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
